--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,7 @@ jobs:
             poetry run coverage run -m pytest ./dummy_django_blog/
             poetry run coverage report
             poetry run coverage html
+            poetry run coveralls
       - store_artifacts:
           path: htmlcov
   lint:
