--- a/dummy_django_blog/requirements.txt
+++ b/dummy_django_blog/requirements.txt
@@ -9,9 +9,8 @@ coverage>=6.5.0
 coveralls>=3.3.1
 defusedxml==0.7.1
 dill==0.3.8
-Django==4.2.14
+Django>=5.0.8
 django-bootstrap-icons==0.9.0
-django-bootstrap-v5==1.0.11
 flake8-report==0.1.0a1
 gunicorn==22.0.0
 idna==3.7
