set DEBUG as boolean

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,7 +13,7 @@ services:
       - 8000
     environment:
       - IS_TESTING=False
-      - DEBUG=False
+      - DEBUG
       - SECRET_KEY
       - DJANGO_ALLOWED_HOSTS
 
