--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -16,6 +16,11 @@ services:
       - DEBUG=${DEBUG}
       - SECRET_KEY
       - DJANGO_ALLOWED_HOSTS
+      - EMAIL_HOST
+      - EMAIL_PORT
+      - EMAIL_USE_TLS
+      - EMAIL_HOST_USER
+      - EMAIL_HOST_PASSWORD
 
   nginx:
     build: ./nginx
