--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -14,6 +14,11 @@ services:
       - DEBUG=${DEBUG}
       - SECRET_KEY
       - DJANGO_ALLOWED_HOSTS
+      - EMAIL_HOST
+      - EMAIL_PORT
+      - EMAIL_USE_TLS
+      - EMAIL_HOST_USER
+      - EMAIL_HOST_PASSWORD
 
   nginx:
     image: memphistools/public_repo:dummy_django_app_on_render_nginx
