set a render postresqgl since SQLite 3.31 or later is required (found 3.27.2)

--- a/dummy_django_blog/Dockerfile
+++ b/dummy_django_blog/Dockerfile
@@ -16,9 +16,9 @@ WORKDIR $APP_HOME
 COPY ./requirements.txt .
 
 RUN apk update; \
+    apk add libpq; \
     apk add bash; \
     apk add sqlite; \
-    apk add libsqlite3-dev; \
     pip install -U pip; \
     pip install --no-cache -r requirements.txt
 
