--- a/dummy_django_blog/requirements.txt
+++ b/dummy_django_blog/requirements.txt
@@ -9,6 +9,7 @@ coverage>=6.5.0
 coveralls>=3.3.1
 defusedxml==0.7.1
 dill==0.3.8
+dj-database-url==2.2.0
 Django>=5.0.8
 django-bootstrap-icons==0.9.0
 flake8-report==0.1.0a1
