--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,11 +17,12 @@ django-pytest = "^0.2.0"
 coverage = "6.5.0"
 pylint = "^3.2.5"
 python-dotenv = "^1.0.1"
-whitenoise = "^6.7.0"
 pytest-django = "^4.8.0"
 flake8-html = "^0.4.3"
 coveralls = "3.3.1"
 pytest-mock = "^3.14.0"
+dj-database-url = "^2.1.0"
+whitenoise = {extras = ["brotli"], version = "^6.7.0"}
 
 [build-system]
 requires = ["poetry-core"]
