set a render postresqgl since SQLite 3.31 or later is required (found 3.27.2)

--- a/render.yaml
+++ b/render.yaml
@@ -33,3 +33,9 @@ services:
         generateValue: true
       - key: DJANGO_ADMIN_EMAIL
         value: admin@bluelake.fr
+      - key: DEBUG
+        value: 0
+      - key: IS_TESTING
+        value: False
+      - key: TIME_ZONE
+        value: Europe/Paris
