--- a/dummy_django_blog/requirements.txt
+++ b/dummy_django_blog/requirements.txt
@@ -24,6 +24,7 @@ pathspec==0.12.1
 pillow==10.4.0
 platformdirs==4.2.2
 pluggy==1.5.0
+psycopg==3.2.1
 pylint==3.2.5
 pytest==8.2.2
 pytest-django==4.8.0
