--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ coveralls = "3.3.1"
 pytest-mock = "^3.14.0"
 dj-database-url = "^2.1.0"
 whitenoise = {extras = ["brotli"], version = "^6.7.0"}
+psycopg = "^3.2.1"
 
 [build-system]
 requires = ["poetry-core"]
