--- a/dummy_django_blog/requirements.txt
+++ b/dummy_django_blog/requirements.txt
@@ -1,16 +1,16 @@
 asgiref==3.8.1
 astroid==3.2.4
-boto3==1.35.0
-botocore==1.35.0
+boto3==1.35.12
+botocore==1.35.12
 Brotli==1.1.0
-certifi==2024.7.4
+certifi==2024.8.30
 charset-normalizer==3.3.2
 coverage==6.5.0
 coveralls==3.3.1
 defusedxml==0.7.1
 dill==0.3.8
 dj-database-url==2.2.0
-Django==5.1
+Django==5.1.1
 django-bootstrap-icons==0.9.0
 django-pytest==0.2.0
 django-storages==1.14.4
@@ -18,7 +18,7 @@ docopt==0.6.2
 flake8==7.1.1
 flake8-html==0.4.3
 gunicorn==22.0.0
-idna==3.7
+idna==3.8
 iniconfig==2.0.0
 isort==5.13.2
 Jinja2==3.1.4
@@ -33,9 +33,9 @@ psycopg==3.2.1
 pycodestyle==2.12.1
 pyflakes==3.2.0
 Pygments==2.18.0
-pylint==3.2.6
+pylint==3.2.7
 pytest==8.3.2
-pytest-django==4.8.0
+pytest-django==4.9.0
 pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -47,4 +47,4 @@ tomlkit==0.13.2
 typing_extensions==4.12.2
 urllib3==2.2.2
 whitenoise==6.7.0
-zipp>=3.19.1 # not directly required, pinned by Snyk to avoid a vulnerability
+zipp==3.20.1
