update packages requirements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ pytest = "^8.2.2"
 django-pytest = "^0.2.0"
 coverage = "6.5.0"
 pylint = "^3.2.5"
-python-dotenv = ">1.0.1"
+python-dotenv = "^1.0.1"
 pytest-django = ">4.8.0"
 flake8-html = "^0.4.3"
 coveralls = "3.3.1"
